testing/macro-tests/tests/ui/store_heap_memory_ids_reserved.stderr
error: storage(heap()) does not accept arguments
  --> tests/ui/store_heap_memory_ids_reserved.rs:10:13
   |
10 |     storage(heap(
   |             ^^^^
